--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 
-  <script src="docs/app.js" defer></script>
+  <script src="docs/lesson6.js" defer></script>
 </head>
 <body>
   <h1>Type Script!</h1>
